# ConvexFX

./: .gitignore  CLEARING_ALGORITHM_ANALYSIS.md  CLEARING_FIX_UPDATE.md  COMPLETION_SUMMARY.md  Cargo.toml  FINAL_STATUS.md  NUMERICAL_TOLERANCE_UPDATE.md  QUICKSTART.md  QUICK_START.md  README.md  README_WEB_APP.md  SUMMARY.md  USER_GUIDE.md  WEB_APP_README.md  book.toml  clarabel_test  main.rs  push_changes.sh  rustc-ice-2025-10-25T13_32_42-49238.txt  start_web_app.sh  stop_web_app.sh  test_clearing_debug.rs
book/src/: SUMMARY.md  api.md  introduction.md
crates/convexfx-api/: Cargo.toml  README.md
crates/convexfx-api/src/: handlers.rs  lib.rs  main.rs  server.rs  state.rs  tests.rs
crates/convexfx-clearing/: Cargo.toml  README.md
crates/convexfx-clearing/src/: epoch_instance.rs  epoch_solution.rs  lib.rs  qp_builder.rs  scp_clearing.rs  scp_clearing.rs.backup  tests.rs
crates/convexfx-delta/: Cargo.toml  INTEGRATION_GUIDE.md  PRODUCTION_READINESS_ASSESSMENT.md  README.md  SCP_PREDICATE_IMPLEMENTATION.md  SP1_IMPLEMENTATION_SUMMARY.md  SP1_LOCAL_LAWS.md  executor.yaml.example
crates/convexfx-delta/src/: demo_app.rs  demo_app.rs.backup  domain_agreement.rs  executor.rs  lib.rs  lib.rs.bak  messages.rs  predicates.rs  runtime_adapter.rs  sdl_generator.rs  sp1_prover.rs  state.rs
crates/convexfx-delta/static/: index.html  script.js  styles.css
crates/convexfx-delta/tests/: integration_test.rs  predicate_validation_test.rs  sdl_generation_test.rs  sp1_integration_test.rs
crates/convexfx-exchange/: Cargo.toml  README.md
crates/convexfx-exchange/examples/: simple_exchange.rs
crates/convexfx-exchange/src/: config.rs  error.rs  exchange.rs  lib.rs  state.rs  tests.rs  websocket.rs
crates/convexfx-exchange/tests/: exchange_api_tests.rs
crates/convexfx-fees/: Cargo.toml  README.md
crates/convexfx-fees/src/: fee_policy.rs  lib.rs  tests.rs
crates/convexfx-integration-tests/: Cargo.toml
crates/convexfx-integration-tests/src/: lib.rs
crates/convexfx-integration-tests/tests/: complex_6_asset.rs
crates/convexfx-ledger/: Cargo.toml  README.md
crates/convexfx-ledger/src/: ledger.rs  lib.rs  memory.rs  tests.rs
crates/convexfx-oracle/: Cargo.toml  README.md
crates/convexfx-oracle/src/: lib.rs  mock.rs  oracle.rs  reference_prices.rs  tests.rs
crates/convexfx-orders/: Cargo.toml  README.md
crates/convexfx-orders/src/: commitment.rs  lib.rs  orderbook.rs  tests.rs  validation.rs
crates/convexfx-report/: Cargo.toml  README.md
crates/convexfx-report/src/: hashing.rs  lib.rs  reporter.rs  tests.rs
crates/convexfx-risk/: Cargo.toml  README.md
crates/convexfx-risk/src/: lib.rs  matrix_utils.rs  risk_params.rs  tests.rs
crates/convexfx-sim/: Cargo.toml  README.md
crates/convexfx-sim/src/: generator.rs  kpi.rs  lib.rs  runner.rs  scenario.rs  testbed.rs  tests.rs
crates/convexfx-sim/tests/: scenarios.rs
crates/convexfx-solver/: Cargo.toml  README.md
crates/convexfx-solver/src/: backend.rs  lib.rs  osqp_backend.rs  qp_model.rs  simple_backend.rs  tests.rs
crates/convexfx-sp1-program/: Cargo.toml
crates/convexfx-sp1-program/src/: main.rs
crates/convexfx-types/: Cargo.toml  README.md
crates/convexfx-types/src/: account.rs  amount.rs  asset.rs  epoch.rs  error.rs  inventory.rs  lib.rs  order.rs  prices.rs  tests.rs
examples/: Cargo.toml  delta_demo.rs  delta_integration.rs  delta_stress_test.rs  simple_clearing.rs
tests/: complex_end_to_end_test.rs  integration_test.rs
