[workspace]
resolver = "2"
members = [
    "crates/convexfx-types",
    "crates/convexfx-ledger",
    "crates/convexfx-oracle",
    "crates/convexfx-risk",
    "crates/convexfx-orders",
    "crates/convexfx-solver",
    "crates/convexfx-clearing",
    "crates/convexfx-fees",
    "crates/convexfx-report",
    "crates/convexfx-api",
    "crates/convexfx-sim",
    "crates/convexfx-exchange",
    "crates/convexfx-delta",
    "crates/convexfx-integration-tests",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["ConvexFX Contributors"]

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math and numerics
nalgebra = "0.33"
ndarray = "0.16"

# Storage
rocksdb = "0.22"
sled = "0.34"

# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Testing
proptest = "1.4"
criterion = "0.5"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Delta network integration
delta_base_sdk = { version = "=0.5.5", registry = "delta" }
delta_executor_sdk = { version = "=0.5.5", registry = "delta" }

[registries.delta]
index = "sparse+https://crates.repyhlabs.dev/api/v1/crates/"
credential-provider = ["cargo:token"]
# Secret token generated via https://kellnr.repyhlabs.dev/settings
token = "IF8THibNiwvrGBLynysamRSxzZIJKzji"