[package]
name = "convexfx-examples"
version = "0.1.0"
edition = "2021"
publish = false

[[example]]
name = "simple_clearing"
path = "simple_clearing.rs"

[[example]]
name = "delta_integration"
path = "delta_integration.rs"

[[example]]
name = "delta_demo"
path = "delta_demo.rs"

[[example]]
name = "delta_stress_test"
path = "delta_stress_test.rs"

[dependencies]
convexfx-clearing = { path = "../crates/convexfx-clearing" }
convexfx-oracle = { path = "../crates/convexfx-oracle" }
convexfx-risk = { path = "../crates/convexfx-risk" }
convexfx-types = { path = "../crates/convexfx-types" }
convexfx-exchange = { path = "../crates/convexfx-exchange" }
convexfx-delta = { path = "../crates/convexfx-delta" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Delta network integration
delta_base_sdk = { version = "=0.5.10", registry = "delta" }


