[package]
name = "convexfx-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convexfx-types = { path = "../convexfx-types" }
convexfx-ledger = { path = "../convexfx-ledger" }
convexfx-orders = { path = "../convexfx-orders" }
convexfx-oracle = { path = "../convexfx-oracle" }
convexfx-clearing = { path = "../convexfx-clearing" }
convexfx-risk = { path = "../convexfx-risk" }
convexfx-report = { path = "../convexfx-report" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = "0.4"

[dev-dependencies]


