[package]
name = "convexfx-clearing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convexfx-types = { path = "../convexfx-types" }
convexfx-solver = { path = "../convexfx-solver" }
convexfx-risk = { path = "../convexfx-risk" }
convexfx-oracle = { path = "../convexfx-oracle" }
convexfx-orders = { path = "../convexfx-orders" }
nalgebra = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

