[package]
name = "convexfx-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convexfx-types = { path = "../convexfx-types" }
thiserror = { workspace = true }
serde = { workspace = true }
rocksdb = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.0"