[package]
name = "convexfx-report"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convexfx-types = { path = "../convexfx-types" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]


