[package]
name = "convexfx-solver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convexfx-types = { path = "../convexfx-types" }
convexfx-risk = { path = "../convexfx-risk" }
convexfx-oracle = { path = "../convexfx-oracle" }
nalgebra = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
clarabel = "0.9"

[dev-dependencies]

